# kv-explorer

./: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  main.rs  persistence.rs
src-tauri/src/handlers/: local.rs  remote.rs
src-tauri/src/models/: cloudflare.rs  kv.rs  mod.rs
src/components/: grid-background.tsx  header.tsx  key-value-table.tsx  kv-explorer.tsx  namespace-sidebar.tsx  remote-connection-modal.tsx  value-editor.tsx  value-preview.tsx
src/components/ui/: button.tsx  checkbox.tsx  toast.tsx  use-toast.ts
src/lib/: api.ts
